production/common/js/bower/requirejs/tests/error/doubleRequire/c.js
define(["myShim"],function(){return{name:"c"}});